k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  namespace: maxweather
  labels:
    app: weather-service
    app.kubernetes.io/name: weather-service
    app.kubernetes.io/part-of: maxweather
spec:
  type: ClusterIP
  selector:
    app: weather-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
